deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: podinfo

    spec:
      containers:
      - name: podinfo
        image: uyahya/presentation:1.1.1
        ports:
        - containerPort: 8080          

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
  labels:
    app: podinfo
  annotations: {}
spec:
  ingressClassName: "nginx"
  rules:
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 80
